# geml_experiments

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dag_compression_v0.yaml  dag_compression_v1.yaml  data_v0.yaml  dataset_v0.yaml  egraph_compression_v1.yaml  equiv_ast.yaml  equiv_eml.yaml  expansion_v0.yaml  expansion_v1.yaml  expression_v1.yaml  frequent_motifs_train_only_v1.yaml  frequent_motifs_v1.yaml  goal5_compression_v1.yaml  hierarchical_graph_export_v1.yaml  learned_motifs_v1.yaml  macro_graph_v1.yaml  neural_egraph_extractor_v1.yaml
docs/: GOAL2_DECISION_MEMO.md  GOAL2_EXPANSION_STUDY.md  GOAL2_SUMMARY.md  GOAL3_DAG_SEMANTICS.md  goal1_completion_report.md
docs/goal1/: goal1_completion_report.md
docs/goal2/: GOAL2_EXPANSION_STUDY_V1.md  GOAL2_FAILURE_CASES.md  GOAL2_FAILURE_CASES_V1.md  GOAL2_OFFICIAL_EML_COMPILER.md  GOAL2_SUMMARY.md  goal2_representation_semantics.md
docs/goal3/: GOAL3R_V1_CORPUS_COMPARISON.md  GOAL3_DAG_COMPRESSION_FINDINGS.md  GOAL3_DAG_COMPRESSION_STUDY.md  (+7 more)
geml/: __init__.py
tests/: __init__.py  goal5_fixture_builders.py  test_ast_graph.py  test_dag_compression_mining.py  test_dag_compression_study.py  test_dag_graph.py  test_dag_metrics.py  test_dag_semantic_audit.py  test_dataset.py  test_egraph_compression_mining.py  test_egraph_compression_study.py  test_egraph_core.py  test_egraph_extractor.py  test_egraph_rule_sets.py  test_egraph_semantic_audit.py  test_eml_transpile.py  test_expansion_failure_mining.py  test_expansion_study.py  test_experiment_shared.py  test_generate_exprs.py  test_goal1_sample.py  test_goal2_expansion_pipeline.py  test_goal3_dag_pipeline.py  test_goal4_egraph_audit.py  test_goal4_egraph_pipeline.py  test_goal5_compression_pipeline.py  test_goal5_frequent_motif_mining.py  test_goal5_hierarchical_export.py  test_goal5_learned_motif_compression.py  test_goal5_macro_graph_baseline.py  test_goal5_neural_egraph_extractor.py  test_imports.py  test_learned_motifs.py  test_macro_graph.py  test_motif_mining.py  test_neural_egraph_extractor.py  test_official_eml_compiler.py  test_plot_dag_compression.py  test_plot_egraph_compression.py  test_plot_expansion_study.py  (+4 more)
(+127 files in other folders)
