[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "geml-experiments"
version = "0.1.0"
description = "EML-native graph model experiments for symbolic mathematical reasoning."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "GEML contributors" },
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["geml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["geml", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "ANN",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
