[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "geml-experiments"
version = "0.1.0"
description = "EML-native graph model experiments for symbolic mathematical reasoning."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "GEML contributors" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib>=3.9",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["geml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers -m 'not slow'"
testpaths = ["tests"]
markers = [
  "slow: optional full-artifact integration tests that are not run by default",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["geml", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "ANN",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
